@@ -35,6 +35,7 @@
 +	- Selecting an invertnext'd object now also selects the invertnext.
 +	- Made the coordinate rounding precision configurable.
 +	- Inverting a subfile now detects whether the subfile is flat and flips it if it is instead of naively invertnexting everything.
++	- Added an action for opening the subfiles pointed to by selected references as editable documents.
 
 -	- The camera is now changed to the top one if switching to draw mode while using the free camera instead of disabling the draw mode.
 -	- The color selector now uses the color's edge color for the borders instead of black.
